envoyfilter-teaching/envoyfilter/cluster/cluster-health_checks-custom.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: custom-redis-cluster
  namespace: istio-system
spec:
  configPatches:
  - applyTo: CLUSTER
    patch:
      operation: ADD
      value:
        name: "custom-redis-cluster"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: MAGLEV
        health_checks:
          - timeout: 10s
            interval: 20s
            initial_jitter: 1s
            interval_jitter: 1s
            interval_jitter_percent: 50
            unhealthy_threshold: 5
            healthy_threshold: 3
            reuse_connection: true
            no_traffic_interval: 60s
            no_traffic_healthy_interval: 100s
            unhealthy_interval: 10s
            unhealthy_edge_interval: 30s
            healthy_edge_interval: 30s
            always_log_health_check_failures: false
            tls_options:
              alpn_protocols:
              - http1.1
              - h2
            transport_socket_match_criteria:
              useMTLS: true
            custom_health_check:
              name: envoy.health_checkers.redis
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.health_checkers.redis.v3.Redis
                key: test
        load_assignment:
          cluster_name: custom-redis-cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: redis-cluster-0.redis-cluster.istio.svc.cluster.local
                    port_value: 6379
            - endpoint:
                address:
                  socket_address:
                    address: redis-cluster-1.redis-cluster.istio.svc.cluster.local
                    port_value: 6379
            - endpoint:
                address:
                  socket_address:
                    address: redis-cluster-2.redis-cluster.istio.svc.cluster.local
                    port_value: 6379
            - endpoint:
                address:
                  socket_address:
                    address: redis-cluster-3.redis-cluster.istio.svc.cluster.local
                    port_value: 6379
            - endpoint:
                address:
                  socket_address:
                    address: redis-cluster-4.redis-cluster.istio.svc.cluster.local
                    port_value: 6379
            - endpoint:
                address:
                  socket_address:
                    address: redis-cluster-5.redis-cluster.istio.svc.cluster.local
                    port_value: 6379
        cluster_type:
          name: envoy.clusters.redis
          typed_config:
            "@type": type.googleapis.com/google.protobuf.Struct
            value:
              cluster_refresh_rate: 5s
              cluster_refresh_timeout: 3s
              redirect_refresh_interval: 5s
              redirect_refresh_threshold: 5
